--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     
 </head>
-<body>
+<body style="color: #ccc;">
 
   <header>
     <h1>WELCOME TO MY WEBSITE</h1>
@@ -23,11 +23,12 @@
     </ul>
 </nav>
 
+<main>
     <h1>My Profile</h1>
     <br>
     
 
-    <marquee width="60%"><b><h3><i>Welcome to my website</i></h3></b></marquee>
+    <marquee width="100%"><b><h3><i>Welcome to my website</i></h3></b></marquee>
     <br>
     <img src="a.png" width="200" height="200">
     <p>Hi,Nama saya Syafiq. Saya dalam proses belajar HTML</p>
@@ -82,6 +83,21 @@
           </tr>
       </table>
 
+      <h2>My Expertise</h2>
+
+      <div id="kiri">
+        <h3>UX Design</h3>
+        <p>Content here</p>
+      </div>
+
+      <div id="kanan">
+        <h3>Backend Developer</h3>
+        <p>Content Here</p>
+      </div>
+
+      <div class="clear"></div>
+
+  </main>
       <footer>
         <h3>SYAFIQ ALIFF</h3>
     </footer>
