--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
-<body>
+<body style="color: #ccc;">
 
   <header>
     <h1>WELCOME TO MY WEBSITE</h1>
@@ -23,11 +23,13 @@
       </ul>
   </nav>
 
+
+  <main>
     <h1><u>My Profile</u></h1>
     <br>
    
 
-    <marquee width="60%"><b><h3><i>Welcome to my website</i></h3></b></marquee>
+    <marquee width="100%"><b><h3><i>Welcome to my website</i></h3></b></marquee>
     <br>
     <img src="a.png" width="200" height="200">
 
@@ -103,6 +105,7 @@
 </ul>
 
 
+</main>
 <footer>
   <h3>SYAFIQ ALIFF</h3>
 </footer>
